Add function: set param[required] comment if the field is required

--- a/user-console/explorer/filebrowser/configs/v0_2_1.yaml
+++ b/user-console/explorer/filebrowser/configs/v0_2_1.yaml
@@ -1,4 +1,4 @@
-## @param pvc Mount a pvc as File Browser workspace
+## @param[required] pvc Mount a pvc as File Browser workspace
 pvc: ""
 
 ## @param resources.limits.cpu CPU limit for File Browser container
