--- a/user-console/virtual-machine/template.yaml
+++ b/user-console/virtual-machine/template.yaml
@@ -3,7 +3,7 @@ kind: Template
 metadata:
   name: virtual-machine
   displayName: "Virtual Machine"
-  defaultVersion: "0.1.1"
+  defaultVersion: "0.1.2"
   categories: 
   - Tool
   description: "虚拟机（Virtual Machine）指通过软件模拟的具有完整硬件系统功能的、运行在一个完全隔离环境中的完整计算机系统。"
@@ -15,6 +15,21 @@ template:
     versions:
     - version: 0.1.1
       config: "file://$APP_DIR/configs/v0_1_1.yaml"
+      readinessProbe:
+        resources:
+        - group: kubevirt.io
+          version: v1
+          resource: virtualmachines
+          name: "{{ .Release.Name }}"
+          currentStatus: "{{ .status.printableStatus }}"
+          desiredStatus: "Running"
+      dependencies:
+        crds:
+        - group: kubevirt.io
+          version: v1
+          resource: virtualmachines
+    - version: 0.1.2
+      config: "file://$APP_DIR/configs/v0_1_2.yaml"
       readinessProbe:
         resources:
         - group: kubevirt.io
