--- a/user-console/notebook/rstudio/chart/Chart.yaml
+++ b/user-console/notebook/rstudio/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: rstudio
-description: RStudio 集成开发环境（IDE），旨在帮助你提高 R 和 Python 的工作效率。
+description: RStudio 是一个集成开发环境，帮助你提高 R 和 Python 的开发效率。
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,10 +15,10 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.2
+version: 0.2.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "0.1.2"
+appVersion: "2023.03.0+386"
