--- a/user-console/notebook/rstudio/template.yaml
+++ b/user-console/notebook/rstudio/template.yaml
@@ -6,14 +6,14 @@ metadata:
   defaultVersion: "0.1.2"
   categories: 
   - IDE
-  description: "RStudio 集成开发环境（IDE），旨在帮助你提高 R 和 Python 的工作效率。"
+  description: "RStudio 是一个集成开发环境，帮助你提高 R 和 Python 的开发效率。"
   icon: "file://$APP_DIR/icon.svg"
 template:
   helm: 
     repo: "oci://docker.io/t9kpublic"
     chart: "rstudio"
     versions:
-    - version: 0.1.1
+    - version: 0.2.0
       config: "file://$APP_DIR/configs/v0_1_1.yaml"
       urls: 
       - name: "rstudio"
