--- a/user-console/tensorboard/chart/Chart.yaml
+++ b/user-console/tensorboard/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: tensorboard
-description: TensorBoard 是 TensorFlow 的可视化工具，它可以展示你的 TensorFlow 网络模型运行过程中的各种可视化数据。
+description: TensorBoard 是 TensorFlow 的可视化工具，展示模型训练过程中的各种数据。
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,10 +15,10 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.2
+version: 0.2.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "0.1.2"
+appVersion: "2.11.0"
