Update app explorer, notebook and tensorboard

--- a/user-console/notebook/jupyter-lab-dcu/configs/v0_2_0.yaml
+++ b/user-console/notebook/jupyter-lab-dcu/configs/v0_2_0.yaml
@@ -4,9 +4,9 @@
 ## @param image.pullPolicy Image pull policy for the Docker image
 ##
 image:
-  registry: docker.io
-  repository: t9kpublic/torch-2.1.0-notebook
-  tag: "20240716"
+  registry: "registry.cn-hangzhou.aliyuncs.com"
+  repository: "t9k/jupyterlab-torch-2.1.0"
+  tag: "240708-dcu"
   pullPolicy: IfNotPresent
 
 ## @param pvc Mount a pvc as notebook working directory.
@@ -14,8 +14,8 @@ pvc: ""
 
 ## @param resources.cpu The maximum number of CPU the notebook can use.
 ## @param resources.memory The maximum number of CPU the notebook can use.
-## @param resources.gpu The maximum number of NVIDIA GPU the notebook can use.
+## @param resources.gcu The maximum number of GCU the notebook can use.
 resources:
   cpu: "16"
   memory: 32Gi
-  gpu: "1"
+  dcu: "1"
