--- a/user-console/tensorboard/configs/v0_2_0.yaml
+++ b/user-console/tensorboard/configs/v0_2_0.yaml
@@ -5,17 +5,25 @@
 ##
 image:
   registry: docker.io
-  repository: t9kpublic/torch-2.1.0-notebook
-  tag: "20240716"
+  repository: t9kpublic/tensorflow-2.11.0
+  tag: "cpu-sdk-0.5.2"
   pullPolicy: IfNotPresent
 
 ## @param pvc Mount a pvc as notebook working directory.
-pvc: ""
+# logDir:
+#   pvc:
+#     - name: tutorial
+#       subPath:
+#         - "train/logs"
+#   s3:
+#     secretRef:
+#       name: ""
+#     uri:
+#       - ""
+logDir: {}
 
-## @param resources.cpu The maximum number of CPU the notebook can use.
-## @param resources.memory The maximum number of CPU the notebook can use.
-## @param resources.gpu The maximum number of NVIDIA GPU the notebook can use.
+## @param resources.cpu The maximum number of CPU the tensorboard can use.
+## @param resources.memory The maximum number of memory the tensorboard can use.
 resources:
-  cpu: "16"
-  memory: 32Gi
-  gpu: "1"
+  cpu: 100m
+  memory: 4Gi
