--- a/user-console/comfyui/template.yaml
+++ b/user-console/comfyui/template.yaml
@@ -4,7 +4,7 @@ metadata:
   name: comfyui
   displayName: "ComfyUI"
   categories: ["AI"]
-  description: "最强大和模块化的 stable diffusion 图形用户界面（GUI）和后端，允许你使用基于图/节点/流程图的 UI 设计和执行高级 stable diffusion 流水线。"
+  description: "ComfyUI 是一个功能强大且模块化的 Stable Diffusion 图形用户界面和后端，支持基于图、节点和流程图设计和执行高级流水线。"
   # icon: "file://$APP_DIR/icon.png"
 template:
   helm:
@@ -12,7 +12,7 @@ template:
     # repo: "https://t9k.github.io/apps/"
     chart: "comfyui"
     versions:
-    - version: 0.1.1
+    - version: 0.2.0
       urls: 
       - name: UI
         url: /apps/{{ .Release.Namespace }}/comfyui/{{ .Release.Name }}/
