--- a/user-console/llama-board/chart/Chart.yaml
+++ b/user-console/llama-board/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: llama-board
-description: "Llama Board 是 LLaMA-Factory 项目的 web UI，用于（增量）预训练、指令微调和评估开源 LLM。"
+description: Llama Board 是 LLaMA-Factory 项目的网页 UI，用于（增量）预训练、指令微调和评估开源 LLM。
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,7 +15,7 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.0
+version: 0.2.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
