--- a/user-console/llama-board/template.yaml
+++ b/user-console/llama-board/template.yaml
@@ -4,7 +4,7 @@ metadata:
   name: llama-board
   displayName: "Llama Board"
   categories: ["AI"]
-  description: "Llama Board 是 LLaMA-Factory 项目的 web UI，用于（增量）预训练、指令微调和评估开源 LLM。"
+  description: "Llama Board 是 LLaMA-Factory 项目的网页 UI，用于（增量）预训练、指令微调和评估开源 LLM。"
   icon: "file://$APP_DIR/icon.png"
 template:
   helm:
@@ -12,7 +12,7 @@ template:
     # repo: "https://t9k.github.io/apps/"
     chart: "llama-board"
     versions:
-    - version: 0.1.0
+    - version: 0.2.0
       urls: []
       # - name: UI
       #   url: /apps/{{ .Release.Namespace }}/fish-speech/{{ .Release.Name }}/
