--- a/user-console/vllm/vllm-smls-dcu/chart/templates/simplemlservice.yaml
+++ b/user-console/vllm/vllm-smls-dcu/chart/templates/simplemlservice.yaml
@@ -61,7 +61,19 @@ spec:
           value: "0,1,2,3"
         {{- end }}
         ports:
-        - containerPort: 8000
+        - name: http
+          containerPort: 8000
+          protocol: TCP
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: http
+          initialDelaySeconds: 60
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: http
+          initialDelaySeconds: 60
         resources:
           {{- toYaml .Values.resources | nindent 12 }}
         volumeMounts:
