--- a/user-console/vllm/vllm-smls-dcu/template.yaml
+++ b/user-console/vllm/vllm-smls-dcu/template.yaml
@@ -4,7 +4,7 @@ metadata:
   name: vllm-dcu
   displayName: "vLLM (Hygon DCU)"
   categories: ["AI"]
-  description: "vLLM 是一个用于大语言模型的高吞吐量和内存高效的推理和服务引擎。适用于海光 DCU。"
+  description: "vLLM (Hygon DCU) 是一个高吞吐量和内存高效的 LLM 推理和服务引擎，适用于海光 DCU。"
   icon: "file://$APP_DIR/icon.png"
 template:
   helm:
@@ -12,7 +12,7 @@ template:
     # repo: "https://t9k.github.io/apps"
     chart: "vllm-dcu"
     versions:
-    - version: 0.1.1
+    - version: 0.2.0
       urls: []
       readinessProbe:
         resources:
