--- a/user-console/vllm/vllm-smls-llama3/chart/Chart.yaml
+++ b/user-console/vllm/vllm-smls-llama3/chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: vllm-llama3
-description: "使用 vLLM 部署 Llama 3.1 系列模型。"
+description: 使用 vLLM 部署 Llama 3.1 系列模型。
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -15,10 +15,10 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.1.5
+version: 0.2.0
 
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "v0.3.3"
+appVersion: "0.5.4"
