--- a/user-console/vllm/vllm-smls/chart/values.yaml
+++ b/user-console/vllm/vllm-smls/chart/values.yaml
@@ -11,12 +11,12 @@ image:
   registry: docker.io
   repository: vllm/vllm-openai
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v0.3.3"
+  tag: "v0.5.4"
   pullPolicy: IfNotPresent
 
 ## @param resources.limits.cpu CPU limit for Kubernetes resources
 ## @param resources.limits.memory Memory limit for Kubernetes resources
-## @param resources.limits.nvidia-gpu Nvidia GPU limit for Kubernetes resources
+## @param resources.limits."nvidia.com/gpu" NVIDIA GPU limit for Kubernetes resources
 ##
 resources:
   limits:
